--- a/topic/inhalt/style.css
+++ b/topic/inhalt/style.css
@@ -56,6 +56,12 @@ body {
     padding: 100px;
 }
 
+.main h2 {
+    text-align: center;
+    font-size: 30px;
+    padding: 100px;
+}
+
 .main a {
     text-decoration: none;
     border: #000 4px solid;
@@ -133,13 +139,13 @@ body {
     .main h1 {
         padding-left: 5px;
         padding-right: 5px;
-        font-size: 30px;
+        font-size: 25px;
     }
 
     .main h2 {
         padding-left: 5px;
         padding-right: 5px;
-        font-size: 25px;
+        font-size: 20px;
     }
 
     .main a {
