--- a/topic/folgen-und-bewertung/style.css
+++ b/topic/folgen-und-bewertung/style.css
@@ -141,6 +141,15 @@ body {
     .top-box .image {
         top: 30%;
     }
+
+    
+    .top-box .top-box-background {
+        filter: blur(10px) brightness(70%);
+        -webkit-filter: blur(10px) brightness(70%);
+        background-size: 60%;
+        width: 100%;
+        height: 100vh;
+    }
 }
 
 @media screen and (max-width: 1000px){
