--- a/topic/vorgeschichte/style.css
+++ b/topic/vorgeschichte/style.css
@@ -122,6 +122,14 @@ body {
     .top-box .image {
         top: 55%;
     }
+
+    .top-box .top-box-background {
+        filter: blur(10px) brightness(70%);
+        -webkit-filter: blur(10px) brightness(70%);
+        background-size: 60%;
+        width: 100%;
+        height: 100vh;
+    }
 }
 
 @media screen and (max-width: 1000px){
